<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WhenActivity"
    android:orientation="vertical" 
    android:gravity="center_horizontal" >

    <TextView
        android:id="@+id/when_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/when_view"
        android:layout_marginBottom="10dp" />
    
    <Button 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:text="@string/pick_date" 
	    android:onClick="showDatePickerDialog"
	    android:layout_marginBottom="10dp" />
    
    <TextView
        android:id="@+id/when_date_picked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/when_date_picked"
        android:layout_marginBottom="10dp" />
    
    <Button
       android:id="@+id/when_go"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/when_go"
       android:layout_marginBottom="10dp" />
    
    <Button
       android:id="@+id/when_recent"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/when_recent"
       android:layout_marginBottom="10dp" />

</LinearLayout>